--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin recipes</title>
+    <title>Recipes-cake</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="./recipes/cake.html">Cake</a>
+    <h1>Cake</h1>
 </body>
 </html>
