Add content and images

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -8,5 +8,49 @@
 </head>
 <body>
     <h1>Cake</h1>
+
+    <img src="../images/cake.jpeg" alt="image of cake">
+
+    <h2>Description:</h2>
+
+    <p>
+        There's nothing like a good ol' back-of-the-box recipe. 
+        This recipe for Hershey's chocolate cake can be found on the baking aisle of any grocery store (specifically,
+        on the label of the brand's signature unsweetened cocoa powder).
+    </p>
+
+    <p>
+        The iconic chocolate cake recipe was shared on Allrecipes more than 20 years ago, and has since earned almost 3,000 rave reviews and ratings.
+        It's not hard to see why it's beloved by the Allrecipes community: Hershey's chocolate cake is incredibly indulgent, yet incredibly easy to make with basic ingredients.
+        Try it today to see what all the fuss is about!
+    </p>
+
+    <h2>Ingredients:</h2>
+
+    <ul>
+        <li>2 cups white sugar</li>
+        <li>1 ¾ cups all-purpose flour</li>
+        <li>¾ cup unsweetened cocoa powder</li>
+        <li>1 ½ teaspoons baking soda</li>
+        <li>1 ½ teaspoons baking powder</li>
+        <li>1 teaspoon salt</li>
+        <li>2 large eggs</li>
+        <li>1 cup milk</li>
+        <li>½ cup vegetable oil</li>
+        <li>2 teaspoons vanilla extract</li>
+        <li>1 cup boiling water</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ul>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour two 9-inch round cake pans.</li>
+        <li>Make cake: Stir together sugar, flour, cocoa, baking soda, baking powder, and salt in a bowl. Add eggs, milk, oil, and vanilla; mix for 3 minutes with an electric mixer. Stir in boiling water by hand. Pour evenly into the prepared pans.</li>
+        <li>Bake in the preheated oven until a toothpick inserted into the centers comes out clean, 30 to 35 minutes. Cool for 10 minutes before removing from pans to cool completely.</li>
+        <li>While cakes cool, make frosting: Cream butter with an electric mixer until light and fluffy. Stir in confectioners' sugar and cocoa alternately with milk and vanilla. Beat to a smooth spreading consistency.</li>
+        <li>Split the layers of the cooled cake horizontally, cover the top of each layer with frosting, then stack them onto a serving plate.</li>
+        <li>Frost the outside of the cake with remaining frosting.</li>
+    </ul>
+
 </body>
 </html>
