--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/cake.html">Cake</a>
+    <ul>
+        <li><a href="./recipes/cake.html">Cake</a></li>
+        <li><a href="./recipes/biryani.html">Biryani</a></li>
+        <li><a href="./recipes/chowmein.html">Chow Mein</a></li>
+    </ul>
+    
 </body>
 </html>
